--- a/.github/workflows/docker_ci_cd.yml
+++ b/.github/workflows/docker_ci_cd.yml
@@ -15,8 +15,8 @@ jobs:
     - name: Login to DockerHub
       uses: docker/login-action@v1
       with:
-        username: ${{ secrets.ccie323 }}
-        password: ${{ secrets.dckr_pat_iu8KnoGvfjKG5qq_QxPCDHh1clk }}
+        username: ${{ secrets.DOCKER_HUB_USERNAME }}
+        password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
 
     - name: Build and push Docker image
       run: |
